# americano_volleyball

./: .gitignore  Home.py  Players.py  README.md  View_players.py  pyproject.toml  ruff.toml  test.ipynb
.streamlit/: secrets copy.toml
americano/: court_session.py  game_session.py  paths.py  player_manager.py  players.py  sessions.py
americano/models/: enums.py
frontend/: config.py  🏠_Home.py
frontend/pages/: 1_⚔️_Tournament.py  1_👫_Players_and_Leaderboard_🏅.py  2_🏐_Game_session.py  2_👫_Players.py  2_👫_Players_and_Leaderboard_🏅.py  3_🏐_Game_session.py  4_🏅_Leaderboard.py
frontend/panes/: common.py
frontend/state/: base.py  firebase.py  get_state.py  streamlit.py
frontend/utils/: old_state.py  state.py
frontend/utils/models/: defaults.py  tournament_options.py
frontend/utils/state/: get_state.py
notebooks/: test.ipynb
pages/: 1_Game_session.py  1_Play_session.py  1_👫_Players_and_Leaderboard_🏅.py  2_🏐_Game_session.py
tests/: test_player_manager.py
