[tool.poetry]
name = "americano"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.37.1"
pydantic = "^2.8.2"
ipykernel = "^6.29.5"
python-dotenv = "^1.0.1"
pytest = "^8.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
